--- a/SAHData.ipynb
+++ b/SAHData.ipynb
@@ -256,7 +256,7 @@
    "source": [
     "#Merging vasospasm data with SAH adat file. Source code derived from Soma Logic Canopy GitHub\n",
     "\n",
-    "new_meta_adat = adat.insert_meta(0,'Vasospasm (0=n, 1=y)', vaso_list)\n",
+    "vaso_adat = adat.insert_meta(0,'Vasospasm (0=n, 1=y)', vaso_list)\n",
     "# this will produce a new Adat file with group data in the right most column of the index\n",
     "\n",
     "vaso_adat.index.to_frame(index=False).loc[0:1]\n"
